# glassbox

./: .gitignore  CHANGELOG.md  DECISIONS.md  DOGFOODING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/plans/: 2026-04-28-glassbox-v1-professional-build-plan.md  2026-04-28-glassbox-v1-v3-roadmap.md
examples/: simple_anthropic_app.py  simple_openai_app.py  simple_tracked_app.py
src/glassbox/: __init__.py  __main__.py  cli.py  config.py  context.py  decorators.py  pricing.json  pricing.py  redaction.py  schema.py  storage.py  viewer_backend.py
src/glassbox/capture/: __init__.py  anthropic.py  openai.py
src/glassbox/viewer_static/: index.html
src/glassbox/viewer_static/assets/: index-BHFT3NjJ.css  index-BYCsKlot.js  index-Bnhd1osk.js  index-BzXT-Uf9.js  index-CeGPSPyj.css  index-DAorgl5l.css  index-DNLEXAH5.css  (+6 more)
tests/: conftest.py  test_capture_anthropic.py  test_capture_openai.py  test_cli.py  test_context.py  test_decorators.py  test_examples.py  test_package_metadata.py  test_pricing.py  test_redaction.py  test_schema.py  test_storage.py  test_viewer_backend.py
viewer/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
viewer/e2e/: run-viewer.spec.ts
viewer/src/: App.tsx  styles.css
viewer/src/api/: client.test.ts  client.ts  types.ts
viewer/src/components/: AiCallDetail.test.tsx  AiCallDetail.tsx  ErrorDetail.test.tsx  ErrorDetail.tsx  RunDetail.test.tsx  RunDetail.tsx  RunList.test.tsx  RunList.tsx
viewer/src/pages/: RunsPage.test.tsx  RunsPage.tsx
viewer/src/utils/: format.ts
